# mlops_pracrice

./: .gitignore  README.md  data_preprocessing.py  model_preparation.py  model_testing.py  pyproject.toml
lab 5/: test_file.ipynb  test_lab5.py
lab1/: data_creation.py  data_preprocessing.py  model_testing.py  pipeline.sh
lab2/: create_dataset.py  make_prediction.py  train_model.py
lab2/jenkins config and setup/: README.md  compose.yaml  jenkins.yaml
